--- a/package.json
+++ b/package.json
@@ -20,17 +20,23 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-<<<<<<< HEAD
     "@capacitor/android": "^1.2.1",
     "@capacitor/core": "1.2.1",
     "@capacitor/ios": "^1.2.1",
-=======
->>>>>>> 49a5dae1db771e3a06a2a0ca4ca0d4cbf8506ca3
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/local-notifications": "^5.15.0",
+    "@ionic-native/social-sharing": "^5.15.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
+    "cordova-plugin-badge": "^0.8.8",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-x-socialsharing": "^5.6.0",
+    "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
+    "es6-promise-plugin": "^4.2.2",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -44,6 +50,7 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
+    "@capacitor/cli": "1.2.1",
     "@ionic/angular-toolkit": "~2.0.0",
     "@ionic/lab": "2.0.11",
     "@types/jasmine": "~3.3.8",
