--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "dev.over40.starter",
   "appName": "snapaday",
   "bundledWebRuntime": false,
   "npmClient": "npm",
