--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
     "@capacitor/core": "1.3.0",
     "@capacitor/ios": "^1.3.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/local-notifications": "^5.17.0",
+    "@ionic-native/social-sharing": "^5.17.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-x-socialsharing": "^5.6.2",
+    "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
